<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_wellcome"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:includeFontPadding="false"
            android:rotation="0"
            android:rotationY="0"
            android:text="@string/tittle"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:rotationX="0"
                android:text="@string/dificilty"
                android:textColor="#0B0A0A"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/sp_difficulties"
                android:layout_width="78dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="invisible" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_randomWord"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/randomWord"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_word"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="#570E0B0B"
            android:backgroundTintMode="add"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_newWord"
            android:inputType="textCapCharacters"
            android:maxLength="20"
            android:textColorHint="#5205CD"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:text="@string/btn_start" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>