<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ed_completeWord"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo3"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="170dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginStart="110dp"
                android:gravity="center"
                android:text="@string/attemps"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_attemps"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_attemps"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            app:srcCompat="@drawable/ahorcado_6" />

        <LinearLayout
            android:id="@+id/lyh_textViews"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sendLetter"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="70dp"
                android:layout_weight="1"
                android:text="@string/btn_check" />

            <EditText
                android:id="@+id/et_letter"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_marginEnd="70dp"
                android:layout_weight="1"
                android:backgroundTint="#570E0B0B"
                android:backgroundTintMode="add"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et_letter"
                android:inputType="textCapCharacters"
                android:maxLength="1"
                android:textColorHint="#3A0288"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_wordComplete"
            android:layout_width="295dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="#570E0B0B"
            android:backgroundTintMode="add"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/completeWords"
            android:inputType="textCapCharacters"
            android:textColorHint="#090000"
            android:textStyle="bold"
            android:visibility="invisible" />

        <Switch
            android:id="@+id/sw_completeWord"
            android:layout_width="223dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/text_swicht"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_newGame"
                android:layout_width="255dp"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:enabled="false"
                android:text="@string/btn_newGame" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>